# temoto

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
config/: console.conf
example_temoto_config_pkg/example_temoto_config_pkg/: CMakeLists.txt  package.xml
example_temoto_config_pkg/example_temoto_config_pkg/config/: .gitignore  action_dst.yaml  components.yaml  console.config  pipes.yaml  robot_description.yaml
example_temoto_config_pkg/example_temoto_config_pkg/launch/: action_assistant.launch  temoto.launch  usb_cam_remappable.launch
example_temoto_config_pkg/example_temoto_config_pkg/src/: component_manager_client.cpp  er_manager_client.cpp  process_manager_client.cpp
example_temoto_config_pkg/example_temoto_config_pkg/src/dummy_components/: component_string_0.cpp  component_string_1.cpp  component_string_2.cpp
example_temoto_config_pkg/temoto_actions/ta_dummy_navigation/: CMakeLists.txt  package.xml  umrf.json
example_temoto_config_pkg/temoto_actions/ta_dummy_navigation/include/ta_dummy_navigation/: temoto_action.h
example_temoto_config_pkg/temoto_actions/ta_dummy_navigation/launch/: invoke_action.launch
example_temoto_config_pkg/temoto_actions/ta_dummy_navigation/src/: ta_dummy_navigation.cpp
example_temoto_config_pkg/temoto_actions/ta_dummy_navigation/test/: ta_dummy_navigation.umrfg.json
example_temoto_config_pkg/temoto_actions/ta_robot_manager_tests/: CMakeLists.txt  package.xml  umrf.json
example_temoto_config_pkg/temoto_actions/ta_robot_manager_tests/include/ta_robot_manager_tests/: temoto_action.h
example_temoto_config_pkg/temoto_actions/ta_robot_manager_tests/launch/: invoke_action.launch
example_temoto_config_pkg/temoto_actions/ta_robot_manager_tests/src/: ta_robot_manager_tests.cpp
example_temoto_config_pkg/temoto_actions/ta_robot_manager_tests/test/: ta_robot_manager_tests.umrfg.json
example_temoto_config_pkg/umrf_graphs/: .umrfg.json  dummy_nav_cycle.umrfg.json  dummy_nav_ex1.umrfg.json  dummy_nav_sequence.umrfg.json
launch/: temoto.launch
scripts/: install_temoto_deps.sh  temoto_pull.sh  temoto_push.sh  temoto_setup.sh  temoto_status.sh  temoto_subsystems.txt  temoto_update.sh
src/: temoto_ws_generator.cpp
temoto/: CMakeLists.txt  package.xml
templates/: temoto_ws_aa_launch.xml  temoto_ws_action_config.xml  temoto_ws_cmakelists.xml  temoto_ws_components.xml  temoto_ws_console_conf.xml  temoto_ws_nlp_launch.xml  temoto_ws_packagexml.xml  temoto_ws_temoto_launch.xml
