<?xml version="1.0"?>
<package format="2">
  <name>temoto</name>
  <version>0.0.0</version>
  <description>The temoto package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>temoto_core</build_depend>
  <build_depend>temoto_utils</build_depend>
  <build_depend>temoto_action_engine</build_depend>
  <build_depend>temoto_er_manager</build_depend>
  <build_depend>temoto_component_manager</build_depend>

  <build_export_depend>temoto_core</build_export_depend>
  <build_export_depend>temoto_utils</build_export_depend>
  <build_export_depend>temoto_action_engine</build_export_depend>
  <build_export_depend>temoto_er_manager</build_export_depend>
  <build_export_depend>temoto_component_manager</build_export_depend>

  <exec_depend>temoto_core</exec_depend>
  <exec_depend>temoto_utils</exec_depend>
  <exec_depend>temoto_action_engine</exec_depend>
  <exec_depend>temoto_er_manager</exec_depend>
  <exec_depend>temoto_component_manager</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
